--- a/src/index.html
+++ b/src/index.html
@@ -4,9 +4,9 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0/css/materialize.min.css">
 
-    <link rel="stylesheet"  href="/node_modules/primeicons/primeicons.css" />
+    <!-- <link rel="stylesheet"  href="/node_modules/primeicons/primeicons.css" />
     <link rel="stylesheet"  href="/node_modules/primeng/resources/themes/nova-light/theme.css" />
-    <link rel="stylesheet"  href="/node_modules/primeng/resources/primeng.min.css" />
+    <link rel="stylesheet"  href="/node_modules/primeng/resources/primeng.min.css" /> -->
 
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <title>Autolink</title>
